...
    <string name="skill">Skill: %1$d</string>
    <string name="transformers_gallery">Transformers gallery</string>
    <string name="transformer_preview">Transformer preview</string>
    <string name="battle_arena">Battle arena</string>
    <string name="edit">Edit</string>
    <string name="delete">delete</string>
    <string name="save">Save</string>
    <string name="connection_error">Connection error</string>
    <string name="name_required">Please insert the Name</string>
    <string name="delete_confirmation">Are you sure to delete transformer - %1$s</string>
    <string name="let_battle_begin">Let the battle begin</string>
    <string name="strength_shot">STR: %1$d</string>
    <string name="intelligence_shot">INT: %1$d</string>
...
