...
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_default">

        <EditText
            android:id="@+id/name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_default_double"
            android:layout_marginStart="@dimen/margin_default_double"
            android:layout_marginTop="@dimen/margin_small"
            android:hint="@string/name"
...
